Deadlock between python and DEG #65174

Closed
opened 2019-05-27 06:04:35 +02:00 by Joseph Eagar · 6 comments
Member

DEG execution thread and the main thread can enter a deadlock over the python GIL. The problem seems to be in bpy.context.evaluated_depsgraph_get (rna_Context_evaluated_depsgraph_get() in rna_centext.c). It updates the depsgraph, creates a thread pool and waits for that pool to exit. If one of these threads calls BKE_id_free_ex on an object with a py reference, you'll get a deadlock. One solution might be to explicitly release the GIL within evaluated_depsgraph_get itself and then re-acquire it, though I dunno if that's really a good idea.

To reproduce, unzip the zip file, open fairing.blend, run main.py, then in the 3D viewport press space and search for "UnSubD Project." It will work a few times and then lock.

fairing2.blend.zip

Btw, in BKE_id_free_ex I noticed there's some #ifdef'd out weak ref code there (WITH_PYTHON_SAFETY and USE_PYRNA_INVALIDATE_WEAKREF). Should this be enabled?

DEG execution thread and the main thread can enter a deadlock over the python GIL. The problem seems to be in bpy.context.evaluated_depsgraph_get (rna_Context_evaluated_depsgraph_get() in rna_centext.c). It updates the depsgraph, creates a thread pool and waits for that pool to exit. If one of these threads calls BKE_id_free_ex on an object with a py reference, you'll get a deadlock. One solution might be to explicitly release the GIL within evaluated_depsgraph_get itself and then re-acquire it, though I dunno if that's really a good idea. To reproduce, unzip the zip file, open fairing.blend, run main.py, then in the 3D viewport press space and search for "UnSubD Project." It will work a few times and then lock. [fairing2.blend.zip](https://archive.blender.org/developer/F7071425/fairing2.blend.zip) Btw, in BKE_id_free_ex I noticed there's some #ifdef'd out weak ref code there (WITH_PYTHON_SAFETY and USE_PYRNA_INVALIDATE_WEAKREF). Should this be enabled?
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Campbell Barton was assigned by Joseph Eagar 2019-05-27 06:06:52 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was unassigned by Sergey Sharybin 2019-05-27 09:47:07 +02:00
Sergey Sharybin self-assigned this 2019-05-27 09:47:07 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@JosephEagar, the script generates a lot of various issues so i couldn't reproduce the original issue. Committed some obviously missing part of code in 27d5d3c2f8.

If the issue still exists for you after that fix please attach more self-contained example file.

@JosephEagar, the script generates a lot of various issues so i couldn't reproduce the original issue. Committed some obviously missing part of code in 27d5d3c2f8. If the issue still exists for you after that fix please attach more self-contained example file.
Author
Member

I can confirm 27d5d3c2f8 fixed it (I've been testing pretty much the exact same code for the past half hour, and there's been no crashes).

I can confirm 27d5d3c2f8 fixed it (I've been testing pretty much the exact same code for the past half hour, and there's been no crashes).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65174
No description provided.