Depsgraph: Use threading guard in context.evaluated_depsgraph_get

This is a part of T65174.